Feat: New design and full save meal plan

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,7 @@
 fr:
+  date:
+    day_names: [Dimanche, Lundi, Mardi, Mercredi, Jeudi, Vendredi, Samedi]
+  
   placeholder_email: "Adresse e-mail"
   placeholder_password: "Mot de passe"
   placeholder_first_name: "Prénom"
