--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -10,6 +10,9 @@ fr:
     facebook: "Se connecter avec Facebook"
     google_oauth2: "Se connecter avec Google +"
 
+  meal_plan:
+    see: 'Voir'
+
   users:
     confirmations:
       confirmed: "Votre compte a été validé."
