feat: create new notebook from recipe when there is no notebook created #247 (#323)
* feat: create new notebook from recipe when there is no notebook created

* fix: display in notebook mason

* fix: troubleshooting on adding recipes to notebook

* fix: random sentence and debugging random recipes

* fix: trunkate title in notebook recipe

* fix: api information

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -244,6 +244,7 @@ en:
     my_recipes:
       link: "My recipes"
       title: "All my recipes"
+    create_notebook: "Create a new notebook"
 
   ingredient:
     title:
