--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,4 +1,5 @@
 fr:
+  back: 'Retour'
   date:
     day_names: [Dimanche, Lundi, Mardi, Mercredi, Jeudi, Vendredi, Samedi]
   
@@ -12,6 +13,18 @@ fr:
 
   meal_plan:
     see: 'Voir'
+    reload: 'Recharger un nouveau planning pour ce jour'
+    not_found: "Ce planning de repas ne vous appartient pas ou n\'existe pas"
+    reload_success: "Le planning de ce jour a bien été refait"
+    reload_error: "Une erreur c'est produite lors de la réedition de ce planning"
+    edit: 'Personnaliser'
+    starter: 'Entrée'
+    dish: 'Plat'
+    dessert: 'Dessert'
+    midday: 'Midi'
+    evening: 'Soir'
+    edit_success: "L'édition s'est bien passé"
+    edit_error: "Problème lors de l'édition, veuillez réessayer plus tard"
 
   users:
     confirmations:
