Fix: Change design for meal_plan

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -13,7 +13,7 @@ fr:
 
   meal_plan:
     see: 'Voir'
-    reload: 'Recharger un nouveau planning pour ce jour'
+    reload: 'Recharger le planning'
     not_found: "Ce planning de repas ne vous appartient pas ou n\'existe pas"
     reload_success: "Le planning de ce jour a bien été refait"
     reload_error: "Une erreur c'est produite lors de la réedition de ce planning"
