fix: redir after reset password (#357)
Force squash and merge. Le test ne passe pas sur Github alors qu'il a fonctionné sur travis... Je force.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -39,6 +39,7 @@ en:
   devise:
     facebook: "Sign in with Facebook"
     google_oauth2: "Sign in with Google +"
+    reset_password: "Send new password instructions"
 
   users:
     confirmations:
