--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -2,7 +2,7 @@ fr:
   back: 'Retour'
   date:
     day_names: [Dimanche, Lundi, Mardi, Mercredi, Jeudi, Vendredi, Samedi]
-  
+
   placeholder_email: "Adresse e-mail"
   placeholder_password: "Mot de passe"
   placeholder_first_name: "Prénom"
@@ -10,6 +10,7 @@ fr:
   devise:
     facebook: "Se connecter avec Facebook"
     google_oauth2: "Se connecter avec Google +"
+    reset_password: "Envoyer les instructions par mail"
 
   meal_plan:
     see: 'Voir'
