--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -107,20 +107,25 @@ fr:
     api:
       follow_ok: "Vous suivez ce producteur"
       follow_ko: "Vous ne suivez plus ce producteur"
-    edit_like_ingredients: "Modifier vos ingrédients préférés"
+    edit_like_ingredients: "Modifier vos préférences"
     must_be_conected: "Vous devez être conecté !"
     like:
-      update_success: "Vos goûts ont été mis à jour !"
-      update_fail: "Vous devez être connecté pour pouvoir modifié vos goûts !"
+      update_success: "Vos préférences ont été mis à jour !"
+      update_fail: "Vous devez être connecté pour pouvoir modifié vos préférences !"
       label: "Les aliments que vous aimez"
-      title: "Modifier ici vos goûts afin de nous permettre de vous générer un planning de repas selon ce vous voulez !"
+      title: "Modifier ici vos préférences afin d'affiner vos recherches"
     unlike:
-      label: "Les aliments que vous détestez"
+      label: "Les aliments que vous n'aimez pas"
     pref:
       title: "Vos préférences ici..."
     profile:
       picture:
         error: "Votre image de profil doit être une image"
+    allergens:
+      title: "Indiquez ci-dessous vos allergènes pour affiner vos recherches"
+      label: "Vos allergènes"
+    utensils:
+      title: "Les ustensiles que vous possédez"
 
 
 
@@ -145,6 +150,7 @@ fr:
     producer:
       list: "Liste des producteurs"
       point_of_sales: "Points de vente"
+    edit_pref: "Mes préférences"
 
   footer:
     infos: "Informations"
@@ -152,7 +158,7 @@ fr:
     contact_us: "Nous contacter"
     legal_notice: "Mentions légales"
     privacy_policy: "Politique de confidentitalité"
-    quote: "Ensemble, gaspillons moins. Mangeons mieux."
+    quote: "Cassez votre routine culinaire !"
 
   avatar:
     not_found: "Aucun avatar"
@@ -176,6 +182,7 @@ fr:
               blank: "Le champ Courriel ne doit pas être vide"
             password:
               blank: "Le champ Mot de passe ne doit pas être vide"
+              too_short: "Mot de passe trop court (8 caractères minimum)"
             password_confirmation:
               confirmation: "Vérification du mot de passe incorrect. Veuillez réessayer"
             current_password:
@@ -294,6 +301,7 @@ fr:
         already_in: "La recette est déjà dans le carnet de recette choisit"
         no_notebook: "Le carnet de recette n'a pas été trouvé ou choisit"
       create_notebook: "Créer un carnet de recette"
+      allergen: "Contient l'allergène %{allergen}"
 
   ingredient:
     title:
@@ -303,6 +311,7 @@ fr:
       description: "Descriptif de l'ingrédient"
       type: "Type d'ingrédient"
       quantity: "Équivalence en quantité d'ingrédients"
+      allergen: "Les allergènes de l'ingrédient"
     unrecognized: "Ingredient non reconnu par l'application"
     no_title: "Titre de l'ingrédient manquant"
     not_created: "L'ingrédient n'a pas pu être créé"
@@ -456,6 +465,16 @@ fr:
     shelf_tag:
       no_result: "Aucun rayon trouvé"
       search_placeholder: "Sélectionnez un rayon de supermarché"
+    allergens:
+      no_result: "Aucun allergène trouvé"
+      search_placeholder: "Vos allergène"
+    utensils:
+      no_result: "Ustensile non trouvé"
+      search_placeholder: "Vos ustensiles"
+    ingredient_allergens:
+      no_result: "Pas d'allergène trouvé"
+      search_placeholder: "Recherchez les allergènes ici"
+      placeholder: "Sélectionnez les allergènes"
 
   are_you_sure: "Êtes vous sûr de vouloir effectuer cette action ?"
   landing:
@@ -463,3 +482,32 @@ fr:
       title: "Téléchargez l'app ici !"
       link: "Cliquez ici pour télécharger l'application"
       qrCode: "Scannez le qr-code ci-dessous"
+  user:
+    recipe:
+      allergen: "Attention à l'allergène %{allergen}"
+  allergen_list:
+    Lactose: "Lactose"
+    Oeuf: "Oeuf"
+    Mollusques: "Mollusques"
+    Poissons: "Poissons"
+    Anhydride_sulfureux: "Anhydride sulfureux ou sulfites"
+    Moutarde: "Moutarde"
+    Lupin: "Lupin"
+    Fruits_a_coque: "Fruits à coque"
+    Graine_de_sesame: "Graines de sesame"
+    Gluten: "Gluten"
+    Soja: "Soja"
+    Arachides: "Arachides"
+    Celeri: "Céléri"
+    Crustaces: "Crustacés"
+    title: "Allergène(s) :"
+  recipe_popular:
+    title: "Nos recettes les plus populaires"
+  author:
+    title: "Proposé par:"
+    title_recipy: "Proposé par Recipy avec"
+  difficulty:
+    easy: "facile"
+    medium: "moyen"
+    hard: "difficile"
+    very_hard: "Très difficile"
