General ui improvment (#358)
* Update landing page

* Update landing page

* Team photo in B&W

* resolve #355

* fix schema updated

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -141,8 +141,9 @@ en:
     sign_in: "Sign in"
     sign_up: "Sign up"
     my_profil: "My profil"
+    welcome_msg: "Welcome %{name} !"
+    who_we_are: "About Recipy"
     edit_pref: "My preferences"
-
   shared_links:
     no_account: "No account ?"
   activerecord:
