--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -142,6 +142,7 @@ fr:
     producers: "Producteurs"
     my_producer_profile: "Mon profil producteur"
     log_out: "Déconnexion"
+    welcome_msg: "Bienvenue %{name} !"
     sign_in: "Se connecter"
     sign_up: "M'inscrire"
     edit_user: 'Modifier mon profil'
@@ -150,8 +151,10 @@ fr:
     point_of_sales: "Points de vente"
     notebooks: "Mes carnets de recette"
     my_meal_plan: "Mon planning de repas"
+    who_we_are: "En savoir plus sur Recipy"
+
     producer:
-      list: "Liste des producteurs"
+      list: "Producteurs près de chez moi"
       point_of_sales: "Points de vente"
     edit_pref: "Mes préférences"
 
@@ -327,7 +330,7 @@ fr:
       label: "Dans quel rayon se trouve votre produit ?"
 
   search:
-    title: "Rechercher"
+    title: "Rechercher une recette"
     read_more: "Lire la suite"
     search: "Rechercher..."
     search_btn: "Rechercher"
