Improve ui for producers pages (#366)
* feat: new procer list

* fix: become producer

* feat: my_prod_prof + front update

* feat: improve form ui

* feat: trad + back to profile

* feat: update point of sale update

* feat: add ref to legal notice

* feat: no pos + prod + update liked prod

* fix: prod liked + No prod

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -144,6 +144,7 @@ en:
     welcome_msg: "Welcome %{name} !"
     who_we_are: "About Recipy"
     edit_pref: "My preferences"
+    my_producer_profile: "My producer profile"
   shared_links:
     no_account: "No account ?"
   activerecord:
@@ -292,13 +293,24 @@ en:
     edit_title: "Edit the product"
     deleted: "Product correctly removed"
     not_found: "Product not found"
+    list_title: "All products"
+    name: "Name"
+    associated_point: "Associated point of sale"
+    new: "New product"
+    Bio: "Organic"
+    Sans_pesticide: "Pesticide free"
+    empty: "No linked tag"
+    edit: "Edit the product"
+    delete: "Delete this product"
+    confirm_delete: "Are you sure to delete this product ?"
+    not_found_list: "No associated product for this producer"
 
   quantity_type:
     label: "Quantity type"
   point_of_sale:
     missing_address: "Missing address"
     wrong_address: "You address is incorrect"
-    title: "Point(s) of sales"
+    title: "Point(s) of sale"
     name: "Name"
     desc: "Description"
     entilted: "Address"
@@ -311,7 +323,7 @@ en:
     hours: "Hours"
     open_hour: "Openning Hours"
     close_hour: "Closing Hours"
-    market_type: "Point of sale's type"
+    market_type: "Type"
     remove: "Remove"
     add_opening_hour: "Add Openning Hours"
     add: "Add point of sale"
@@ -330,6 +342,8 @@ en:
     hour: "Hour"
     api:
       not_found: "Point of sale is not found"
+    address: "Address"
+    not_found: "No associated point of sale for this producer"
   notebook:
     edit:
       invalid: "The notebook is invalid"
@@ -357,14 +371,29 @@ en:
       no_result: "No allergen found"
       search_placeholder: "Select your allergens"
       placeholder: "Select you allergens"
+    market_type:
+      no_result: "No type found"
+      search_placeholder: "Select a market type"
+    ustensils:
+      search_placeholder: "Select your ustensils"
+    pos_day:
+      no_result: "Not found"
+      search_placeholder: "Select a day"
   landing:
     download_app:
       title: "Download the app here !"
       link: "Click here to download the app"
       qrCode: "Scan the qr-code below"
   producer:
+    no_point_of_sale: "No registered points of sale"
+    number_point_of_sale: "Number of points of sale %{number}"
+    no_product: "No registered product"
+    number_product: "Number of product: %{number}"
+    no_bio: "No provided description"
     new:
       welcome: "You are now a producer ! Welcome"
+    back_to_profile: "Return to my producer profile"
+    no_list: "No producer on the plateform"
   user:
     recipe:
       allergen: "Warning to the allergen %{allergen}"
@@ -394,5 +423,3 @@ en:
     medium: "medium"
     hard: "hard"
     very_hard: "very hard"
-
-
