--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -139,6 +139,13 @@ fr:
     list: "Liste des producteurs"
     new:
       welcome: "Devenir producteur"
+    no_point_of_sale: "Aucun point de vente enregistré"
+    number_point_of_sale: "Nombre de points de vente %{number}"
+    no_product: "Aucun produit enregistré"
+    number_product: "Nombre de produits : %{number}"
+    no_bio: "Pas de description fournie"
+    back_to_profile: "Retourner sur mon profil producteur"
+    no_list: "Aucun producteur sur la plateforme !"
 
   navbar:
     producers: "Producteurs"
@@ -362,13 +369,24 @@ fr:
     edit_title: "Editer le produit"
     deleted: "Produit correctement supprimé"
     not_found: "Produit non trouvé"
+    list_title: "Tous les produits"
+    name: "Nom"
+    associated_point: "Point de vente associé"
+    new: "Nouveau produit"
+    Bio: "Bio"
+    Sans_pesticide: "Sans pesticide"
+    empty: "Aucun tag associé"
+    edit: "Modifier le produit"
+    delete: "Supprimer ce produit"
+    confirm_delete: "Êtes-vous sûr de vouloir supprimer ce produit ?"
+    not_found_list: "Aucun produit ajouté par ce producteur"
   quantity_type:
     label: "Type de Quantité"
 
   point_of_sale:
     missing_address: "Adresse manquante"
     wrong_address: "Votre adress est incorrect"
-    title: "Point de vente(s)"
+    title: "Point(s) de vente"
     name: "Nom"
     desc: "Description"
     entilted: "Adresse"
@@ -382,7 +400,7 @@ fr:
     hour: "Heure"
     open_hour: "Horaire d'ouverture"
     close_hour: "Horaire de fermeture"
-    market_type: "Type de point de vente"
+    market_type: "Type"
     remove: "Retirer"
     add_opening_hour: "Ajouter horaire d'ouverture"
     add: "Ajouter un point de vente"
@@ -400,6 +418,8 @@ fr:
     delete_success: "Point de vente supprimé"
     api:
       not_found: "Le point de vente est introuvable"
+    address: "Adresse"
+    not_found: "Aucun point de vente pour ce producteur"
 
   feedback:
     notification: "Votre avis a bien été pris en compte."
@@ -485,6 +505,12 @@ fr:
       no_result: "Pas d'allergène trouvé"
       search_placeholder: "Recherchez les allergènes ici"
       placeholder: "Sélectionnez les allergènes"
+    market_type:
+      no_result: "Type non trouvé"
+      search_placeholder: "Sélectionnez un type de point de vente"
+    pos_day:
+      no_result: "Non trouvé"
+      search_placeholder: "Sélectionnez un jour"
 
   are_you_sure: "Êtes vous sûr de vouloir effectuer cette action ?"
   landing:
