--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -87,10 +87,13 @@ en:
         update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
         updated: "Your account has been updated successfully."
         updated_but_not_signed_in: "Your account has been updated successfully, but since your password was changed, you need to sign in again"
+        sign_up: "Sign up"
     sessions:
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
+      new:
+        sign_in: "Sign up"
     unlocks:
       send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
       send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
@@ -258,6 +261,7 @@ en:
       title: "All my recipes"
     create_notebook: "Create a new notebook"
     allergen: "Contain the allergen %{allergen}"
+    image_not_found: "No available image for this recipe"
 
   ingredient:
     title:
@@ -348,6 +352,7 @@ en:
     edit:
       invalid: "The notebook is invalid"
       invalid_image: "Image is not valid"
+    image_not_found: "No available image for this notebook"
 
   active_admin:
     dashboard: "Dashboard"
