Fix some ui issues (#391)
* feat: popup + prod img

* fix: seelct style

* fix: ui update

* fix: show recipes error diets

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -262,6 +262,7 @@ en:
     create_notebook: "Create a new notebook"
     allergen: "Contain the allergen %{allergen}"
     image_not_found: "No available image for this recipe"
+    add_to_shopping_list: "Add to a shopping list:"
 
   ingredient:
     title:
