--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -315,11 +315,14 @@ fr:
       add_to_notebook:
         valid: "La recette a bien été ajouté au carnet de recettes"
         already_in: "La recette est déjà dans le carnet de recette choisit"
-        no_notebook: "Le carnet de recette n'a pas été trouvé ou choisit"
+        no_notebook: "Le carnet de recette n'a pas été trouvé ou choisi"
       create_notebook: "Créer un carnet de recette"
       allergen: "Contient l'allergène %{allergen}"
       image_not_found: "Pas d'image disponible pour cette recette"
       add_to_shopping_list: "Ajouter à une liste de courses :"
+      shopping_list_new: "Créer une nouvelle liste de courses"
+      notebook:
+        new_notebook: "Créer un nouveau carnet de recettes"
 
   ingredient:
     title:
