Problème UI/UX sur le front (#405)
* fix: a lot of fix on the UI

* fix: connection button accessible only if you're not sign in

* fix: connection error

* fix: traduction & changing wording

* fix: fixing some issues on the front in shopping list

* fix: preventing ingredients nil when updating the shopping list

* fix: useful comment added

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -444,6 +444,10 @@ en:
     very_hard: "very hard"
   shopping_list:
     pof_too_far: "We can't find any point of sale close to you"
+    edite: "Edit your shopping list"
+    delete: "Delete the shopping list"
+    confirm_delete: "Do you really want to delete this shopping list"
+    validation: "Great success !"
   errors:
     external_error_page: "External error"
     not_found_page: ""
