--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -459,10 +459,14 @@ fr:
   shopping_list:
     title: "Listes de course"
     go_back: 'Revenir à mes listes'
-    new: "Créer une liste de course"
+    new: "Créer une liste de courses"
     pof_title: "Disponible ici:"
     pof_bad_address: "Veuillez ajouter ou modifier votre adresse pour voir les points de ventes près de chez vous"
     pof_too_far: "Aucun point de vente ne propose ces produits proche de chez vous"
+    edite: "Editer votre liste de course"
+    delete: "Supprimer la liste de course"
+    confirm_delete: "Êtes vous sûr de vouloir supprimer cette liste de course ?"
+    validation: "La liste est créée"
   active_admin:
     dashboard: "Dashboard"
     dashboard_welcome:
